--- a/mysite/polls/templates/after-login.html
+++ b/mysite/polls/templates/after-login.html
@@ -1,236 +1,17 @@
 {% include "base.html" %}
-</head>
-<body>
-<section class="mainwrappcont">
-	
-    <!--Header start here-->
-   <header id="headfixbar">
-    <div class="toplogopanel"><img src="{{STATIC_URL}}polls/images/admin-logo.png" alt=""/></div>
-    <a href="#" class="navmobile"></a>
-    <div class="toplinkpanel">
-      <ul class="linkrightpanel">
-        <li><a href="#"><i class="fa fa-search"></i></a></li>
-        <li class="posi_global"><a href="#"><span class="notifictdiv">1</span><i class="fa fa-bell-o"></i></a></li>
-        <li class="posi_global"><a href="#" class="settingdrop"><i class="fa fa-cog"></i></a>
-          <div class="settingdropdownpan">
-            <div class="popuarrow"></div>
-            <div class="dropwappdiv">
-              <h6>Change Theme Color</h6>
-              <ul>
-                <li><a href="#" style="background-color:#fb9337"></a></li>
-                <li><a href="#" style="background-color:#fb9337"></a></li>
-                <li><a href="#" style="background-color:#fb9337"></a></li>
-                <li><a href="#" style="background-color:#fb9337"></a></li>
-                <li><a href="#" style="background-color:#fb9337"></a></li>
-              </ul>
+
+       
+						 <div class="theGrid"  id="primaryorg">
+							
+							</div>
               <div class="clear"></div>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="clear"></div>
-  </header>
-    <!--Header end here-->
-    
-    <!--content panel start here-->
-    <section>
-    <section class="maincontentbox">
-    
-    	<!--aside left panel start here-->
-       <aside class="leftmenpan hiddendiv">
-        <section class="mainwrappcont">
-          <div class="usersstatus">
-            <div class="avtarclass"><a href="#" class="userprofill"><img src="{{STATIC_URL}}polls/images/pic-avatarimg.png" alt=""/></a></div>
-            <div class="avtarnamergt"> <a href="#"  class="userprofill"><span>John Doe</span> <i class="fadownarrow"></i></a> </div>
-            <div class="clear"></div>
-            <div class="dropdowmenu">
-              <div class="popuarrow"></div>
-              <ul>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Notification</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Logout</a></li>
-              </ul>
-            </div>
-          </div>
-          <section class="leftmenuscroll">
-            <ul class="asideleftlink leftsidemenu">
-              <li><a href="#"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-dashboard.png" alt=""/></span><span class="textname">Dashboard</span> <span class="arrowupdown">&nbsp;</span> </a>
-                <div class="submenudiv">
-                  <ul class="sublistlink">
-                    <li><a href="#"><span>System Configuration</span></a></li>
-                    <li><a href="#"><span>Alerts</span></a></li>
-                    <li><a href="#"><span>Account Info</span></a></li>
-                    <li><a href="#"><span>Activate / Deactivate Seats</span></a></li>
-                  </ul>
-                </div>
-              </li>
-              <li><a href="#" class="primaryorg"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-primaryorg.png" alt=""/></span> <span class="textname">Primary Org</span> </a></li>
-              <li><a href="#" class="teamsicon"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-teams.png" alt=""/></span> <span class="textname">Teams</span> </a></li>
-              <li><a href="#" class="workgroup"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-workgroup.png" alt=""/></span> <span class="textname">Workgroups</span> </a></li>
-              <li><a href="#" class="livedocs"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-livedocs.png" alt=""/></span> <span class="textname">LiveDocs</span> </a></li>
-              <li><a href="#" class="documents"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-documents.png" alt=""/></span> <span class="textname">Documents</span> </a></li>
-              <li><a href="#" class="process"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-process.png" alt=""/></span> <span class="textname">Process</span> </a></li>
-              <li><a href="#" class="channels"><span class="iconspan"><img src="{{STATIC_URL}}polls/images/icon-channel.png" alt=""/></span> <span class="textname">channels</span> </a></li>
-            </ul>
-          </section>
-          <div class="asidefooterpan">
-            <ul class="footerlinklist">
-              <li><a href="#" class="logoffcls">&nbsp;</a></li>
-              <li><a href="#" class="menupanl menuicons">&nbsp;</a></li>
-            </ul>
-          </div>
-        </section>
-      </aside>
-        <!--aside left panel end here-->
-        
-        <!--section right panel start here-->
-        <section class="">
-        	<section class="mainwrappcont">
-            
-            	<!--top link start here-->
-                  <div class="topbluepanel">
-					<ul class="toplinkpanel">
-					  <li class="mobilwidt"><a href="#" class="user">Add User</a></li>
-					</ul>
-					<div  class="mobilemorelnk fright"> <a href="#">&nbsp;</a>
-					  <div class="morebsublinkdiv">
-						<div class="moretopsubarrw"></div>
-						<div class="linkwrappdiv">
-						  <ul class="toplinkpanel">
-							<li><a href="#" class="globalicon">Global</a></li>
-							<li><a href="#" class="profileicon">User Profiles</a></li>
-							<li><a href="#" class="organizaticon">Organizations</a></li>
-							<li><a href="#" class="livedocicon">LiveDocs</a></li>
-							<li><a href="#" class="documenticon">Documents</a></li>
-						  </ul>
-						</div>
-					  </div>
-					</div>
-					<div class="clear"></div>
-				  </div>
-                <!--top link end here-->
-                
-               <section class="topfityone">
-					<section class="cotentitlepan_add"> 
-                    	 <div class="theGrid">
-                <div class="gridTop">
-                <ul>
-                    <li style="border-left:none;">
-                    <a class="activete" href="javascript:void(0);" onclick="activeslt()">Activate Selected</a>
-                    <select id="select" class="active_deactivate_select">
-                    	<option>page Limit</option>
-                        <option>page Limit</option>
-                    </select>
-                    </li>
-                    
-                    <li>
-                    <a class="deactivete" href="javascript:void(0);" onclick="inactiveslt()">Deactivate Selected</a>
-                    <select id="select" class="active_deactivate_select">
-                    	<option>Filter by</option>
-                        <option>Filter by</option>
-                    </select>
-                    </li>
-                    
-                   <!-- <li>
-                    <a class="delete" href="#">Delete Selected</a>
-                    <select id="select" class="not_view_select">
-                    	<option>Not Viewed in</option>
-                        <option>Not Viewed in</option>
-                    </select>
-                    </li>-->
-                    <div class="clear"></div>
-                  </ul>
-                  		<input type="search" name="input-filter" id="input-filter" placeholder="Search" class="search_box" />
-                    <input type="submit" value="" id="txtsubmit" name="txtsubmit" class="search_btn" />
-                  <div class="clear"></div>
-                </div>
-                <div class="clear"></div>
-                 <!--New-->
-                    <div class="new_table_wi">
-                    <section id="flip-scroll">
-                    	 <table class="table-bordered table-striped table-condensed cf" id="tbl">
-						  <thead class="cf">
-							  <tr class="cf_bg_colro">
-								  <th><input type="checkbox"  id="selectall" /></th>
-								  <th>Name</th>
-								  <th class="numeric">Roll</th>
-								  <th class="numeric">Report To</th>
-								  <th class="numeric">Email</th>
-								  <th class="numeric">Creation date</th>
-								  <th class="numeric">Status</th>
-								  <th class="numeric">Action</th>
-							  </tr>
-						  </thead>
-						  <tbody>
-						  {% for d in data%}
-						  <tr id="list{{d.id}}">
-						<td><input type="checkbox" name="checklist[]" class="checkbox1" id="checklist{{d.id}}" value="{{d.id}}"  /></td>
-						<td>{{d.username}}</td>
-						<td class="numeric">{{d.role}}</td>
-						<td class="numeric">{{d.report_to}}</td>
-						<td class="numeric">{{d.email}}</td>
-						<td class="numeric">{{d.date}}</td>
-						<td class="numeric">{{d.status}}</td>
-						<td class="numeric">
-                        		  <ul class="table_ul">
-									<li><a href="#"><img src="{{STATIC_URL}}polls/images/action1.png" alt="#" /></a></li>
-									<li><a href="#"><img src="{{STATIC_URL}}polls/images/action2.png" alt="#" /></a></li>
-									{% if d.status == "Active" %}
-									<li><a href="javascript:void(0);" onclick="listinactive({{d.id}})" ><img src="{{STATIC_URL}}polls/images/action3.png" alt="#" /></a></li>
-									{% else %}
-									<li><a href="javascript:void(0);" onclick="listactive({{d.id}})" ><img src="{{STATIC_URL}}polls/images/action4.png" alt="#" /></a></li>
-									{% endif %}
-									<!--<li><a href="javascript:void(0);" onclick="removelist({{d.id}})"><img src="{{STATIC_URL}}polls/images/action5.png" alt="#" /></a></li>-->
-                                  <div class="clear"></div>
-                                </ul></td>
-					</tr>
-					{% endfor %}
-					</tbody>
-					</table>
-					
-                  
-                    
-                 
                     </section>
-                    </div>
-              <!--Table Ends-->
-                      
-						
-                </div>
-              <!--Table Ends-->
-                <div class="paginetion">
-              		<!--Left-->
-                    <div class="paginetion_left">
-                    	<input type="submit" id="submit" name="submit" value="ADD NEW" class="page_btn" />
-                    </div>
-                    <!--Left-->
-                    <!--Right-->
-                    <div class="paginetion_right">
-                    	<ul>
-                        	<li>
-							{% if data.has_previous %}
-							 <a href="?page={{ data.previous_page_number }}"><img src="{{STATIC_URL}}polls/images/page_btn.png" alt="page_btn" /></a>
-							{% endif %}
-							{% if data.has_next %}
-                            <a href="?page={{ data.next_page_number }}"><img src="{{STATIC_URL}}polls/images/page_btn1.png" alt="page_btn" /></a>
-							{% endif %}
-                            </li>
-                            
-                            <li>
-                            	<p> {{ data.number }} of <span>{{ data.paginator.num_pages }}</span></p>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--Right-->
-              </div>
-              <div class="clear"></div>
+                
+                
             </section>
-          </section>
+            
+            </section>
         </section>
-      </section>
         <!--section right panel end here-->
     
     </section>
@@ -316,6 +97,7 @@
 	 $('table').filterTable({ // apply filterTable to all tables on this page
             inputSelector: '#input-filter' // use the existing input instead of creating a new one
         });
+			
 	$('#cpform').bValidator();
 			var id = '#dialog';
 		
@@ -425,14 +207,15 @@
 			$('#mask').hide();
 		});	
 	});
-	function listinactive(id)
+	function listinactive(id,str)
 	{
 		$.ajax({
-			url:"/home/listinactive/",
+			url:"/home/listinactive/"+str,
 			type: "POST",
 			data: {id: id,csrfmiddlewaretoken: '{{ csrf_token }}'},
 			success:function(response){
-			location.reload();
+			$("#primaryorg").html(response);
+					$("#primaryorg").show();
 			},
 			complete:function(){},
 			error:function (xhr, textStatus, thrownError){
@@ -440,14 +223,15 @@
 			}
 		});
 	}
-	function listactive(id)
+	function listactive(id,str)
 	{
 		$.ajax({
-			url:"/home/listactive/",
+			url:"/home/listactive/"+str,
 			type: "POST",
 			data: {id: id,csrfmiddlewaretoken: '{{ csrf_token }}'},
 			success:function(response){
-			location.reload();
+			$("#primaryorg").html(response);
+					$("#primaryorg").show();
 			},
 			complete:function(){},
 			error:function (xhr, textStatus, thrownError){
@@ -462,7 +246,8 @@
 			type: "POST",
 			data: {id: id,csrfmiddlewaretoken: '{{ csrf_token }}'},
 			success:function(response){
-			location.reload();
+			$("#primaryorg").html(response);
+					$("#primaryorg").show();
 			},
 			complete:function(){},
 			error:function (xhr, textStatus, thrownError){
@@ -470,7 +255,7 @@
 			}
 		});
 	}
-	function activeslt()
+	function activeslt(str)
 	{
 		
 		$('#selectall').removeAttr('checked');
@@ -484,11 +269,12 @@
 			var searchIDs = $("input:checkbox:checked").map(function(){
 			  //alert($(this).val());
 			  $.ajax({
-					url:"/home/activeslt/",
+					url:"/home/activeslt/"+str,
 					type: "POST",
 					data: {id: $(this).val(),csrfmiddlewaretoken: '{{ csrf_token }}'},
 					success:function(response){
-					//alert(response);
+					$("#primaryorg").html(response);
+					$("#primaryorg").show();
 					counter++;
 					},
 					complete:function(){},
@@ -497,14 +283,12 @@
 					}
 				});
 			}).get();
-			alert('Activate Successfully');
-			if(counter > 0){
-				location.reload();	
-			}
+			//alert('Activate Successfully');
+			
 			}
 		
 	}
-	function inactiveslt()
+	function inactiveslt(str)
 	{
 		$('#selectall').removeAttr('checked');
 		var lena=$("input:checkbox:checked").length;
@@ -517,11 +301,12 @@
 			var searchIDs = $("input:checkbox:checked").map(function(){
 			  //alert($(this).val());
 			  $.ajax({
-					url:"/home/inactiveslt/",
+					url:"/home/inactiveslt/"+str,
 					type: "POST",
 					data: {id: $(this).val(),csrfmiddlewaretoken: '{{ csrf_token }}'},
 					success:function(response){
-					counter++;
+					$("#primaryorg").html(response);
+					$("#primaryorg").show();
 					},
 					complete:function(){},
 					error:function (xhr, textStatus, thrownError){
@@ -530,27 +315,12 @@
 				});
 			}).get();
 		}
-		alert('Deactivate Successfully');
-			if(counter > 0){
-				location.reload();	
-			}
+		//alert('Deactivate Successfully');
+			
 		
 		
 	}
-	$(document).ready(function() {
-    $('#selectall').click(function(event) {  //on click 
-        if(this.checked) { // check select status
-            $('.checkbox1').each(function() { //loop through each checkbox
-                this.checked = true;  //select all checkboxes with class "checkbox1"               
-            });
-        }else{
-            $('.checkbox1').each(function() { //loop through each checkbox
-                this.checked = false; //deselect all checkboxes with class "checkbox1"                       
-            });         
-        }
-    });
-    
-});
+	
 	</script>
 	
 </body>
