--- a/mysite/polls/static/polls/screen.css
+++ b/mysite/polls/static/polls/screen.css
@@ -1291,4 +1291,138 @@ table .span12 {
 .paginetion_right ul li {
 	float:none;	
 }
+
+#nav li {
+	border:1px solid #014e82;
 }
+#nav li a {
+	background: #0071c8 url(/static/polls/images/dropdown_hover_icon.png) right no-repeat !important;
+}
+#nav li ul {
+	z-index:99;	
+}
+.re_magin {
+	margin-top:12px;
+	margin-bottom:12px;
+}
+#nav li ul li a { background:none !important;}
+#nav li ul li ul li p {
+	padding:0px 0px !important; 	
+}
+#nav li ul {
+	left:0% !important;
+	width:113px;	
+}
+#nav li ul li ul {
+	left:100% !important;
+	width:113px;	
+}
+}
+
+/* 
+	Grid Dropdown
+*/
+#nav {
+ float: left;
+ margin: 0; padding: 0;
+ width:100%;
+ 
+}
+#nav li a:hover {
+	background: #0071c8 url(/static/polls/images/dropdown_hover_icon.png) right no-repeat !important;
+}
+#nav li a, #nav li {
+ float: left;
+ width:100%;
+}
+
+#nav li {
+ list-style: none;
+ position: relative;
+}
+
+#nav li a {
+ padding: 1em 2em 1em 1em;
+ text-decoration: none;
+ color: #FFFFFF;
+ background: #0071c8;
+}
+
+/* Submenu */
+
+.hasChildren {
+	position: absolute;
+	width: 5px; height: 5px;
+	background: black;
+	right : 0;
+	bottom: 0;
+}
+
+#nav li ul {
+ display: none;
+ position: absolute;
+ left: 81%;
+ top: 100%;
+ padding: 0; margin: 0;
+ border:solid 1px #d4d4d4;
+}
+
+#nav li:hover > ul {
+ display: block;
+}
+
+#nav li ul li {
+ float: none;
+ background:url("/static/polls/images/sort_grid_icon.png") no-repeat scroll 0px 10px #f0f0f0;
+ padding-left:24px;
+}
+#nav li ul li:last-child {
+ background:url("/static/polls/images/sort_grid_icon1.png") no-repeat scroll 0px 10px #f0f0f0;
+}
+#nav li ul li a {
+ float: none;
+ color:#666666;
+ background-color: #f0f0f0;
+}
+#nav li ul li a:hover { background-color:#f0f0f0 !important; background-image:none !important;} 
+#nav li ul li {
+ _display: inline; /* for IE6 */
+}
+#nav li ul li ul li { background-image:none !important; padding-left:0px;}
+#nav li ul li a {
+ width: auto;
+ display: block;
+}
+#nav li ul li ul li p {
+	width:100%;
+	color:#6a6a6a;
+	font-size:10px;
+	width:100px;
+	padding:5px 0px;
+}
+.#nav li ul li ul li p span {
+	float:left;	
+}
+/* SUBSUB Menu */
+
+#nav li ul li ul {
+ display: none;
+ margin-top:10px;
+}
+
+#nav li ul li:hover ul {
+ left: 100%;
+ top: 0;
+}
+
+
+#nav li ul 
+.re_magin2 {
+	margin-left:5px;
+	float:left;
+	width:30px;
+	height:30px;
+}
+/* 
+	Grid Dropdown Ends
+*/
