--- a/mysite/polls/templates/message.html
+++ b/mysite/polls/templates/message.html
@@ -1,4 +1,17 @@
-{% include "base.html" %}
+<html>
+<head>
+<title>Welcome to Vorg</title>
+<link href="{{STATIC_URL}}polls/style.css" rel="stylesheet" type="text/css">
+<link href="{{STATIC_URL}}polls/reset.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
+<script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}polls/jquery.bvalidator.js" type="text/javascript"></script>
+<link href="{{STATIC_URL}}polls/bvalidator.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}polls/responsive-layout.css" rel="stylesheet" type="text/css" />
+<style type="text/css">
+body {display:table;}
+</style>
 </head>
 
 <body>
